# Auto-Driving

./: .gitignore  README.md
src/lidar_localization/: CMakeLists.txt  package.xml
src/lidar_localization/Log/: back_end_node.INFO  back_end_node.ubuntu.kingbob.log.INFO.20230103-154139.9639  back_end_node.ubuntu.kingbob.log.INFO.20230103-162433.16772  back_end_node.ubuntu.kingbob.log.INFO.20230103-164626.19042  data_pretreat_node.INFO  data_pretreat_node.WARNING  data_pretreat_node.ubuntu.kingbob.log.INFO.20230103-170254.21018  data_pretreat_node.ubuntu.kingbob.log.INFO.20230103-171056.22796  data_pretreat_node.ubuntu.kingbob.log.INFO.20230103-171520.23593  data_pretreat_node.ubuntu.kingbob.log.INFO.20230103-171714.24378  data_pretreat_node.ubuntu.kingbob.log.INFO.20230103-172538.25196  data_pretreat_node.ubuntu.kingbob.log.INFO.20230103-172757.25944  data_pretreat_node.ubuntu.kingbob.log.WARNING.20230103-171520.23593  data_pretreat_node.ubuntu.kingbob.log.WARNING.20230103-171714.24378  data_pretreat_node.ubuntu.kingbob.log.WARNING.20230103-172538.25196  data_pretreat_node.ubuntu.kingbob.log.WARNING.20230103-172757.25944  front_end_node.INFO  front_end_node.WARNING  front_end_node.ubuntu.kingbob.log.INFO.20221211-192830.24509  front_end_node.ubuntu.kingbob.log.INFO.20221211-193332.25233  front_end_node.ubuntu.kingbob.log.INFO.20221211-194339.25624  front_end_node.ubuntu.kingbob.log.INFO.20221212-095835.6931  front_end_node.ubuntu.kingbob.log.INFO.20221212-102329.8286  front_end_node.ubuntu.kingbob.log.INFO.20221212-174519.23630  front_end_node.ubuntu.kingbob.log.INFO.20221212-175037.25664  front_end_node.ubuntu.kingbob.log.INFO.20221212-175149.26348  front_end_node.ubuntu.kingbob.log.INFO.20221213-093453.6088  front_end_node.ubuntu.kingbob.log.INFO.20221213-093902.7253  front_end_node.ubuntu.kingbob.log.INFO.20221213-133159.17797  front_end_node.ubuntu.kingbob.log.INFO.20230103-154018.9440  front_end_node.ubuntu.kingbob.log.INFO.20230103-154139.9638  front_end_node.ubuntu.kingbob.log.INFO.20230103-162433.16771  front_end_node.ubuntu.kingbob.log.INFO.20230103-164626.19041  viewer_node.INFO  (+5 more)
(+79 files in other folders)
